2009-05-08  Claude Lepage  <claude@bic.mni.mcgill.ca>
	* Make nu_estimate_np_and_em.in invariant to voxel steps (via
  	  spline_smooth in EBTKS)
	* Free memory after usage

2008-06-10  Andrew L Janke <a.janke@gmail.com>
	* updated README, merged CHANGES and WHATSNEW into NEWS
	* src/NUcorrect/nu_estimate_np_and_EM: added code to check on
	  (deprecated) use of the EM section and thus spit a warning
	* epm-header.in: removed netcdf dependency

2006-04-29  Claude Lepage  <claude@bic.mni.mcgill.ca>
	* change xPERLx to @PERL@, etc. 

2006-04-27  Claude Lepage  <claude@bic.mni.mcgill.ca>
	* repackaging for minc2 m4 files

2005-03-16  Andrew Janke   <a.janke@gmail.com>
	* Changed from MNI:DataDir to FindBin for binary distribution
	* Added epm-header.in for binary distribution

2005-03-08  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* src/SharpenHist/sharpen_hist.cc uses finite(), which is not
	  available on many versions of Solaris.  Added a test to look for
	  isfinite() as well as finite() in configure.in
	* src/EvaluateField/evaluateField.cc,
	  src/SplineSmooth/splineSmooth.cc, src/VolumeHist/minchist.cc
	  Get rid of redundant #define N_DIMENSIONS 3, which duplicates
	  the definition in volume_io.h and generates a warning.	

2004-11-18  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* src/ExtractTag/extracttag.c - minor change to argTable[] to 
	  reflect the fact that -mintags and -maxtags take 'long' arguments
	  rather than 'int' arguments.  This was pointed out as a potential 
	  issue on 64-bit platforms by Yasunari Tosa of MGH.
	
2004-11-17  Bert Vincent   <bert@bic.mni.mcgill.ca>
	* nu_estimate_np_and_em.in - fixed CreateMask to work properly
	  if the user-provided mask file winds up having the same name
	  as the internally generated temporary mask file.  This should only
	  happen when the user-specified file is compressed, or otherwise
	  needs processing before it can be used.  This problem sometimes
	  resulted in test case #14 failing.
	 